// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddDialog /> should match snapshot 1`] = `
<div>
  <form
    id="add-reference"
    onSubmit={[Function]}
  >
    <IdentifierInput
      fieldRef={[Function]}
      identifierList={""}
      onChange={[Function]}
    />
  </form>
  <ButtonRow
    addManually={false}
    attachInline={true}
    isLoading={false}
    onAttachInlineToggle={[Function]}
    onSearchPubmedClick={[Function]}
    onToggleManual={[Function]}
  />
  <style
    jsx={true}
  >
    
                    div {
                        position: relative;
                    }
                
  </style>
</div>
`;

exports[`<AddDialog /> should match snapshot 2`] = `
<div>
  <form
    id="add-reference"
    onSubmit={[Function]}
  >
    <IdentifierInput
      fieldRef={[Function]}
      identifierList={""}
      onChange={[Function]}
    />
  </form>
  <ButtonRow
    addManually={true}
    attachInline={true}
    isLoading={false}
    onAttachInlineToggle={[Function]}
    onSearchPubmedClick={[Function]}
    onToggleManual={[Function]}
  />
  <style
    jsx={true}
  >
    
                    div {
                        position: relative;
                    }
                
  </style>
</div>
`;
